calculate the Topics of high interest

--- a/03. Data Science from Scratch by Joel Grus/Chapter 01.ipynb
+++ b/03. Data Science from Scratch by Joel Grus/Chapter 01.ipynb
@@ -50,7 +50,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "93d198cc",
+   "id": "6e5ed691",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "23abbb74",
+   "id": "684c34b1",
    "metadata": {},
    "outputs": [
     {
@@ -83,7 +83,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "3e9d177d",
+   "id": "0815810b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +97,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "fd9642b6",
+   "id": "2bf94f63",
    "metadata": {},
    "outputs": [
     {
@@ -144,7 +144,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "b0c74f9c",
+   "id": "e97eb5db",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +159,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "980cec65",
+   "id": "5fb6b546",
    "metadata": {},
    "outputs": [
     {
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1b437b89",
+   "id": "2cea5560",
    "metadata": {},
    "source": [
     "And then we just divide by the number of users:"
@@ -189,7 +189,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "49c310e5",
+   "id": "b5ea252c",
    "metadata": {},
    "outputs": [
     {
@@ -221,7 +221,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "a9411e0f",
+   "id": "5cfc7319",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -232,7 +232,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "ab6623cb",
+   "id": "dd8d15e8",
    "metadata": {},
    "outputs": [
     {
@@ -262,7 +262,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "e6452f00",
+   "id": "f9770578",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -272,7 +272,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "c3d11057",
+   "id": "ef697f62",
    "metadata": {},
    "outputs": [
     {
@@ -342,7 +342,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "76b1ddef",
+   "id": "5212b88a",
    "metadata": {},
    "source": [
     "### Data Scientists You May Know"
@@ -350,7 +350,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c78f032b",
+   "id": "2724c362",
    "metadata": {},
    "source": [
     "To make a \"People you may know\" suggester we need to find the connection between users. Like a user might know the firends of\n",
@@ -396,7 +396,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "74f8f634",
+   "id": "8b60c8ad",
    "metadata": {},
    "outputs": [
     {
@@ -416,7 +416,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "54a12b60",
+   "id": "0f2106bc",
    "metadata": {},
    "source": [
     "It includes user 0 twice, since Hero is indeed friends with both of his\n",
@@ -428,7 +428,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "84968c39",
+   "id": "05c53126",
    "metadata": {},
    "outputs": [
     {
@@ -450,7 +450,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "58548f03",
+   "id": "40eb9ad1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -486,7 +486,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "34bcccc0",
+   "id": "127a5c2d",
    "metadata": {},
    "source": [
     "This correctly tells Chi (id 3) that she has two mutual friends with Hero (id\n",
@@ -495,7 +495,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d848434a",
+   "id": "079af952",
    "metadata": {},
    "source": [
     "### “substantive expertise”"
@@ -504,7 +504,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "7f0aa974",
+   "id": "cfc67fa0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -524,7 +524,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b17779dc",
+   "id": "79ccf01b",
    "metadata": {},
    "source": [
     "function that finds users with a certain interest:\n"
@@ -533,7 +533,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "9791162f",
+   "id": "9610ee7e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -546,7 +546,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8d1a6363",
+   "id": "86b6fff6",
    "metadata": {},
    "source": [
     "This works, but it has to examine the whole list of interests for every\n",
@@ -558,7 +558,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "b7b29630",
+   "id": "43a6f762",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -568,7 +568,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "d86e5706",
+   "id": "d08810c0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -582,7 +582,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "00f725d8",
+   "id": "1fb2733d",
    "metadata": {},
    "source": [
     "And another from users to interests:\n"
@@ -591,7 +591,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "7770cb86",
+   "id": "3ed6c4c7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -604,7 +604,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "62a44014",
+   "id": "eb8b2d3c",
    "metadata": {},
    "source": [
     "Now it’s easy to find who has the most interests in common with a given\n",
@@ -617,7 +617,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "3a00f920",
+   "id": "017a313f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -632,7 +632,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "585ae1c4",
+   "id": "148ddd6a",
    "metadata": {},
    "source": [
     "### Salaries and Experience"
@@ -641,7 +641,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "cbd1321f",
+   "id": "12023cc7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -659,7 +659,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "3d359c1c",
+   "id": "676a68f4",
    "metadata": {},
    "source": [
     "![graph.jpg](attachment:graph.jpg)"
@@ -667,7 +667,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4d1eaf3e",
+   "id": "18bc08f8",
    "metadata": {},
    "source": [
     "It seems clear that people with more experience tend to earn more. Our first idea is to look at the average salary for each tenure."
@@ -676,7 +676,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "f07c6ae0",
+   "id": "0d2ef7e3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -696,7 +696,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "a47ea2f6",
+   "id": "f16bba2f",
    "metadata": {},
    "outputs": [
     {
@@ -725,7 +725,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "403a4560",
+   "id": "d5250fb7",
    "metadata": {},
    "source": [
     "It might be more helpful to bucket the tenures:\n"
@@ -734,7 +734,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "d99ade50",
+   "id": "cd5f6bd5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -749,7 +749,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f503ad6f",
+   "id": "938852a4",
    "metadata": {},
    "source": [
     "Then we can group together the salaries corresponding to each bucket:\n"
@@ -758,7 +758,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "08801ed6",
+   "id": "01aa2ef9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -772,7 +772,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cabfa331",
+   "id": "cffc458e",
    "metadata": {},
    "source": [
     "And finally compute the average salary for each group:"
@@ -781,7 +781,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "4f50ce47",
+   "id": "67681836",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -795,7 +795,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "38a928b0",
+   "id": "aa8a1891",
    "metadata": {},
    "outputs": [
     {
@@ -817,7 +817,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "808beb26",
+   "id": "7fccfe39",
    "metadata": {},
    "source": [
     "### Paid Accounts"
@@ -826,7 +826,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "2fcca4ad",
+   "id": "e01882e6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -840,57 +840,106 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "23b052a0",
+   "cell_type": "markdown",
+   "id": "0cc36364",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Topics of Interest"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6a08d661",
+   "id": "88f0fc30",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "interests = [\n",
+    "        (0, \"Hadoop\"), (0, \"Big Data\"), (0, \"HBase\"), (0, \"Java\"),(0, \"Spark\"), (0, \"Storm\"), (0, \"Cassandra\"),\n",
+    "        (1, \"NoSQL\"), (1, \"MongoDB\"), (1, \"Cassandra\"), (1, \"HBase\"),(1, \"Postgres\"),\n",
+    "        (2, \"Python\"), (2, \"scikit-learn\"), (2, \"scipy\"),(2, \"numpy\"), (2, \"statsmodels\"), (2, \"pandas\"),\n",
+    "        (3, \"R\"), (3, \"Python\"),(3, \"statistics\"), (3, \"regression\"), (3, \"probability\"),    \n",
+    "        (4, \"machine learning\"), (4, \"regression\"), (4, \"decision trees\"),(4, \"libsvm\"),\n",
+    "        (5, \"Python\"), (5, \"R\"), (5, \"Java\"), (5, \"C++\"),(5, \"Haskell\"), (5, \"programming languages\"),\n",
+    "        (6, \"statistics\"),(6, \"probability\"), (6, \"mathematics\"), (6, \"theory\"),\n",
+    "        (7, \"machine learning\"), (7, \"scikit-learn\"), (7, \"Mahout\"),(7, \"neural networks\"),\n",
+    "        (8, \"neural networks\"), (8, \"deep learning\"),(8, \"Big Data\"), (8, \"artificial intelligence\"),\n",
+    "        (9, \"Hadoop\"),(9, \"Java\"), (9, \"MapReduce\"), (9, \"Big Data\")\n",
+    "        ]\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8e5e73e2",
+   "metadata": {},
+   "source": [
+    "One simple (if not particularly exciting) way to find the most popular\n",
+    "interests is to count the words:\n",
+    "1. Lowercase each interest (since different users may or may not\n",
+    "capitalize their interests).\n",
+    "2. Split it into words.\n",
+    "3. Count the results."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "6aa1b5cf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "words_and_counts = Counter(word\n",
+    "                           for user, interest in interests \n",
+    "                           for word in interest.lower().split())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0c8152b5",
+   "metadata": {},
+   "source": [
+    "This makes it easy to list out the words that occur more than once:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "065f00e2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "big 3\n",
+      "data 3\n",
+      "java 3\n",
+      "python 3\n",
+      "learning 3\n",
+      "hadoop 2\n",
+      "hbase 2\n",
+      "cassandra 2\n",
+      "scikit-learn 2\n",
+      "r 2\n",
+      "statistics 2\n",
+      "regression 2\n",
+      "probability 2\n",
+      "machine 2\n",
+      "neural 2\n",
+      "networks 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "for word, count in words_and_counts.most_common():\n",
+    "    if count > 1:\n",
+    "        print(word, count)\n"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4b1d73f0",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8a7099ab",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a9dd2e37",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "acff63e0",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "91a3314c",
+   "id": "ddb131a7",
    "metadata": {},
    "outputs": [],
    "source": []
