--- a/03. Data Science from Scratch by Joel Grus/Chapter 01.ipynb
+++ b/03. Data Science from Scratch by Joel Grus/Chapter 01.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "875be4e2",
+   "id": "66eb441d",
    "metadata": {},
    "source": [
     "In this chapter, we're delving into the basics of Data Science using a practical example. Imagine we have a bunch of user information like names, IDs, interests, friends, and salary. The goal is to apply Data Science techniques to figure out interesting connections and patterns in this data, ultimately creating useful outputs. It's like detective work but with numbers and information!"
@@ -19,7 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "52850709",
+   "id": "1c08d233",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "4fa42794",
+   "id": "d9462c4e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "7b8fe52c",
+   "id": "59a7c1c3",
    "metadata": {},
    "source": [
     "![Pic01.jpg](attachment:Pic01.jpg)"
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "54c73295",
+   "id": "5a2e2154",
    "metadata": {},
    "source": [
     "<div align=\"center\"><b>Fig: Friendship Pair Network</b></div>"
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5cf16e98",
+   "id": "97fe0745",
    "metadata": {},
    "source": [
     "Having friendships represented as a list of pairs in such a way is not the easiest way to\n",
@@ -97,7 +97,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "234c2548",
+   "id": "10ec87e1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +109,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "459b3477",
+   "id": "585c84ad",
    "metadata": {},
    "outputs": [
     {
@@ -130,7 +130,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "ae62de02",
+   "id": "8b7746a8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +144,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "fddad3a3",
+   "id": "c5273870",
    "metadata": {},
    "outputs": [
     {
@@ -172,8 +172,30 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "5c255c9d",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "(5, 6)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[32], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mfriendships\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m5\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;241;43m6\u001b[39;49m\u001b[43m]\u001b[49m\n",
+      "\u001b[1;31mKeyError\u001b[0m: (5, 6)"
+     ]
+    }
+   ],
+   "source": [
+    "friendships[5]"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "b03715cb",
+   "id": "f9718e70",
    "metadata": {},
    "source": [
     "Now as we have the friendships in a dict we can ask different questions from it, like “What’s the average number of connections?”\n"
@@ -191,7 +213,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "22fdf52f",
+   "id": "7eddf766",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +228,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "3d828758",
+   "id": "3d18fcd1",
    "metadata": {},
    "outputs": [
     {
@@ -227,7 +249,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9df38fc8",
+   "id": "0a862342",
    "metadata": {},
    "source": [
     "Now we just divide by the number of users:"
@@ -236,7 +258,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "0cd33417",
+   "id": "d3882fba",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -247,7 +269,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "8c816d21",
+   "id": "52314dce",
    "metadata": {},
    "outputs": [
     {
@@ -276,7 +298,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "866bb031",
+   "id": "fefdeec6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -287,7 +309,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "d9e1b904",
+   "id": "a646069a",
    "metadata": {},
    "outputs": [
     {
@@ -317,7 +339,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "b2527e12",
+   "id": "5eb0b6a6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -327,7 +349,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "1138c9f4",
+   "id": "399f7f26",
    "metadata": {},
    "outputs": [
     {
@@ -369,7 +391,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3c2aaaac",
+   "id": "c6b02136",
    "metadata": {},
    "source": [
     "<div align=\"center\"><b>Fig: The Network sized by degree</b></div>"
@@ -383,7 +405,7 @@
     "Here, \n",
     "\n",
     "```python\n",
-    "        sorted(num_friends_by_id, key=lambda item: item[1], reverse=True)\n",
+    "            sorted(num_friends_by_id, key=lambda item: item[1], reverse=True)\n",
     "```\n",
     "\n",
     "\n",
@@ -405,15 +427,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6f459f45",
+   "id": "7d5faffe",
    "metadata": {},
    "source": [
-    "### Data Scientists You May Know"
+    "## Data Scientists You May Know"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "319f0bd4",
+   "id": "3bd54320",
    "metadata": {},
    "source": [
     "To make a \"People you may know\" suggester we need to find the connection between users. Like a user might know the firends of\n",
@@ -422,11 +444,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 46,
+   "id": "a30abdfb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Find out who are the friends of User 0\n",
+    "\n",
+    "for friend_id in friendships[0]:\n",
+    "    print(friend_id)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "4c260a89",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "2\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "# As we get user 1 and user 2 are two friends of user 0\n",
+    "# Now we will find out who are the friends of user 1 and user 2\n",
+    "\n",
+    "# Friends of user 1\n",
+    "\n",
+    "for foaf_id in friendships[1]:\n",
+    "    print(foaf_id)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "3e72c78a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Friends of user 2\n",
+    "\n",
+    "for foaf_id in friendships[2]:\n",
+    "    print(foaf_id)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
    "id": "819112b4",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Here we combined the whole code inside a single function to run a loop\n",
+    "\n",
     "def foaf_ids_bad(user):\n",
     "    return [foaf_id\n",
     "           for friend_id in friendships[user[\"id\"]]\n",
@@ -435,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 50,
    "id": "3df69fed",
    "metadata": {
     "scrolled": true
@@ -447,7 +542,7 @@
        "{'id': 0, 'name': 'Hero'}"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -458,8 +553,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "c25ba469",
+   "execution_count": 51,
+   "id": "aa6635d0",
    "metadata": {},
    "outputs": [
     {
@@ -468,30 +563,30 @@
        "[0, 2, 3, 0, 1, 3]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "foaf_ids_bad(users[0])"
+    "foaf_ids_bad(users[0]) # It represents the friends of friends of user 0"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "0f272738",
+   "id": "196aa5f9",
    "metadata": {},
    "source": [
-    "It includes user 0 twice, since Hero is indeed friends with both of his\n",
-    "friends. It includes users 1 and 2, although they are both friends with Hero\n",
-    "already. And it includes user 3 twice, as Chi is reachable through two\n",
+    "It includes user 0 twice, since \"Hero\" (user 0) is indeed friends with both of his\n",
+    "friends. It includes user 1 and user 2, although they are both friends with \"Hero\"\n",
+    "already. And it includes user 3 twice, as \"\"Chi\" is reachable through two\n",
     "different friends:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "69ca41b0",
+   "execution_count": 52,
+   "id": "afc2e7e0",
    "metadata": {},
    "outputs": [
     {
@@ -511,18 +606,56 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 20,
-   "id": "a7ca68ab",
+   "cell_type": "markdown",
+   "id": "fb46e163",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "from collections import Counter "
+    "We should exclude the people already known to the user;"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 53,
+   "id": "64b6bca9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from collections import Counter"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ce9629a7",
+   "metadata": {},
+   "source": [
+    "The line of code 'from collections import Counter' is a Python import statement. It is used to bring the 'Counter' class from the 'collections' module into your Python script or program.\n",
+    "\n",
+    "Counter is a powerful and convenient tool in Python for counting the occurrences of elements in a collection, such as a list. It creates a dictionary-like object where keys are the elements in the collection, and values are their respective counts.\n",
+    "\n",
+    "example:\n",
+    "\n",
+    "```python\n",
+    "        from collections import Counter\n",
+    "\n",
+    "        my_list = [1, 2, 3, 1, 2, 1, 4, 5, 4, 3, 6]\n",
+    "\n",
+    "        # Using Counter to count the occurrences of elements in the list\n",
+    "        my_counter = Counter(my_list)\n",
+    "\n",
+    "        # Accessing the counts\n",
+    "        print(my_counter)\n",
+    "        # Output: Counter({1: 3, 2: 2, 3: 2, 4: 2, 5: 1, 6: 1})\n",
+    "\n",
+    "```\n",
+    "\n",
+    "In this example, 'Counter' is used to count the occurrences of each element in the list 'my_list'. The resulting 'Counter' object shows the counts in a dictionary-like format.\n",
+    "\n",
+    "This can be useful in various scenarios, such as finding the most common elements in a collection or checking for the frequency distribution of elements."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
    "id": "013a4c17",
    "metadata": {},
    "outputs": [
@@ -549,16 +682,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e41b1fa8",
+   "id": "f32d43d8",
    "metadata": {},
    "source": [
-    "This correctly tells Chi (id 3) that she has two mutual friends with Hero (id\n",
-    "0) but only one mutual friend with Clive (id 5).\n"
+    "This correctly tells \"Chi\" (user 3) that she has two mutual friends (user 1 & user 2) with \"Hero\" (user 0) but only one mutual friend (user 4) with \"Clive\" (user 5).\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "e9c11268",
+   "id": "7ffcf40e",
    "metadata": {},
    "source": [
     "### “substantive expertise”"
@@ -567,7 +699,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "97735742",
+   "id": "bd381dd4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -587,7 +719,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f287a11f",
+   "id": "8087e61e",
    "metadata": {},
    "source": [
     "function that finds users with a certain interest:\n"
@@ -596,7 +728,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "0256fb4f",
+   "id": "46c7ea43",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -609,7 +741,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c090e305",
+   "id": "6b4b14d5",
    "metadata": {},
    "source": [
     "This works, but it has to examine the whole list of interests for every\n",
@@ -621,7 +753,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "18fd61b2",
+   "id": "7e52db1b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -631,7 +763,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "041dceaf",
+   "id": "46118b1c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -645,7 +777,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6e779b5c",
+   "id": "661624ee",
    "metadata": {},
    "source": [
     "And another from users to interests:\n"
@@ -654,7 +786,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "f59c2a1f",
+   "id": "0666255f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -667,7 +799,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "90166895",
+   "id": "50da9f70",
    "metadata": {},
    "source": [
     "Now it’s easy to find who has the most interests in common with a given\n",
@@ -680,7 +812,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "e23cc48d",
+   "id": "8e508664",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -695,7 +827,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "949ef38a",
+   "id": "7b9d50d3",
    "metadata": {},
    "source": [
     "### Salaries and Experience"
@@ -704,7 +836,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "5a8c4f8f",
+   "id": "77ecd54e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -722,7 +854,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "a4fee641",
+   "id": "8078aac3",
    "metadata": {},
    "source": [
     "![graph.jpg](attachment:graph.jpg)"
@@ -730,7 +862,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4d384b6d",
+   "id": "58312247",
    "metadata": {},
    "source": [
     "It seems clear that people with more experience tend to earn more. Our first idea is to look at the average salary for each tenure."
@@ -739,7 +871,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "ff460ac8",
+   "id": "a0dff29a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -759,7 +891,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "7a80a19f",
+   "id": "91f51002",
    "metadata": {},
    "outputs": [
     {
@@ -788,7 +920,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "269474c0",
+   "id": "81160a18",
    "metadata": {},
    "source": [
     "It might be more helpful to bucket the tenures:\n"
@@ -797,7 +929,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "057d350f",
+   "id": "396a8e83",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -812,7 +944,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2d9da658",
+   "id": "6278ca03",
    "metadata": {},
    "source": [
     "Then we can group together the salaries corresponding to each bucket:\n"
@@ -821,7 +953,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "1f618d94",
+   "id": "50d69217",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -835,7 +967,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "17f84ac5",
+   "id": "c9f89355",
    "metadata": {},
    "source": [
     "And finally compute the average salary for each group:"
@@ -844,7 +976,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "1b3f2313",
+   "id": "784c844f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -858,7 +990,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "0c769b8c",
+   "id": "478e0953",
    "metadata": {},
    "outputs": [
     {
@@ -880,7 +1012,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dc433eeb",
+   "id": "c7507a4d",
    "metadata": {},
    "source": [
     "### Paid Accounts"
@@ -889,7 +1021,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "a473e2c3",
+   "id": "076f078b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -904,7 +1036,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f33ec6f6",
+   "id": "9a4623b2",
    "metadata": {},
    "source": [
     "### Topics of Interest"
@@ -913,7 +1045,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "19e26845",
+   "id": "dc2e3455",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -933,7 +1065,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "94dbc4db",
+   "id": "6115592e",
    "metadata": {},
    "source": [
     "One simple (if not particularly exciting) way to find the most popular\n",
@@ -947,7 +1079,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "fe54f729",
+   "id": "15c05eff",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -958,7 +1090,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c1ebfe0e",
+   "id": "8a856260",
    "metadata": {},
    "source": [
     "This makes it easy to list out the words that occur more than once:"
@@ -967,7 +1099,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "3190ec92",
+   "id": "4badd38a",
    "metadata": {},
    "outputs": [
     {
