--- a/03. Data Science from Scratch by Joel Grus/Chapter 01.ipynb
+++ b/03. Data Science from Scratch by Joel Grus/Chapter 01.ipynb
@@ -173,20 +173,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 7,
    "id": "5c255c9d",
    "metadata": {},
    "outputs": [
     {
-     "ename": "KeyError",
-     "evalue": "(5, 6)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[32], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mfriendships\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m5\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;241;43m6\u001b[39;49m\u001b[43m]\u001b[49m\n",
-      "\u001b[1;31mKeyError\u001b[0m: (5, 6)"
-     ]
+     "data": {
+      "text/plain": [
+       "[4, 6, 7]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -212,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "7eddf766",
    "metadata": {},
    "outputs": [],
@@ -227,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "3d18fcd1",
    "metadata": {},
    "outputs": [
@@ -237,7 +236,7 @@
        "24"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -338,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 14,
    "id": "5eb0b6a6",
    "metadata": {},
    "outputs": [],
@@ -348,26 +347,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 15,
    "id": "399f7f26",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[(8, 3),\n",
-       " (5, 3),\n",
-       " (3, 3),\n",
+       "[(1, 3),\n",
        " (2, 3),\n",
-       " (1, 3),\n",
-       " (7, 2),\n",
-       " (6, 2),\n",
-       " (4, 2),\n",
+       " (3, 3),\n",
+       " (5, 3),\n",
+       " (8, 3),\n",
        " (0, 2),\n",
+       " (4, 2),\n",
+       " (6, 2),\n",
+       " (7, 2),\n",
        " (9, 1)]"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -444,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 16,
    "id": "a30abdfb",
    "metadata": {},
    "outputs": [
@@ -466,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 17,
    "id": "4c260a89",
    "metadata": {},
    "outputs": [
@@ -492,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 18,
    "id": "3e72c78a",
    "metadata": {},
    "outputs": [
@@ -515,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 19,
    "id": "819112b4",
    "metadata": {},
    "outputs": [],
@@ -530,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 20,
    "id": "3df69fed",
    "metadata": {
     "scrolled": true
@@ -542,7 +541,7 @@
        "{'id': 0, 'name': 'Hero'}"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -553,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 21,
    "id": "aa6635d0",
    "metadata": {},
    "outputs": [
@@ -563,7 +562,7 @@
        "[0, 2, 3, 0, 1, 3]"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -585,7 +584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 22,
    "id": "afc2e7e0",
    "metadata": {},
    "outputs": [
@@ -615,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 23,
    "id": "64b6bca9",
    "metadata": {},
    "outputs": [],
@@ -655,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 24,
    "id": "013a4c17",
    "metadata": {},
    "outputs": [
@@ -693,7 +692,17 @@
    "id": "7ffcf40e",
    "metadata": {},
    "source": [
-    "### “substantive expertise”"
+    "## Substantive Expertise"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "11f6ff31",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Here the interests of the users are given in a touple "
    ]
   },
   {
