--- a/03. Data Science from Scratch by Joel Grus/Chapter 01.ipynb
+++ b/03. Data Science from Scratch by Joel Grus/Chapter 01.ipynb
@@ -696,18 +696,16 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "11f6ff31",
+   "cell_type": "markdown",
+   "id": "7d5edabc",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "Here the interests of the users are given in a touple "
+    "Here the interests of the users are given with their users id in a touple."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 25,
    "id": "bd381dd4",
    "metadata": {},
    "outputs": [],
@@ -731,7 +729,7 @@
    "id": "8087e61e",
    "metadata": {},
    "source": [
-    "function that finds users with a certain interest:\n"
+    "Function that finds users with a certain interest:"
    ]
   },
   {
