--- a/03. Data Science from Scratch by Joel Grus/Chapter 01.ipynb
+++ b/03. Data Science from Scratch by Joel Grus/Chapter 01.ipynb
@@ -697,7 +697,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7d5edabc",
+   "id": "e1bc8c45",
    "metadata": {},
    "source": [
     "Here the interests of the users are given with their users id in a touple."
@@ -734,7 +734,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 26,
    "id": "46c7ea43",
    "metadata": {},
    "outputs": [],
@@ -743,7 +743,7 @@
     "    \"\"\"Find the ids of all users who like the target interest\"\"\"\n",
     "    return [user_id\n",
     "           for user_id, user_interest in interests\n",
-    "           if user_interest == targeet_interest]"
+    "           if user_interest == target_interest]"
    ]
   },
   {
@@ -797,11 +797,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Keys are user_ids, values are lists of interests for that user_id.\n",
+    "# Keys are user_ids, values are lists of interests for that user_id\n",
+    "\n",
     "interests_by_user_id = defaultdict(list)\n",
     "\n",
     "for user_id, interest in interests:\n",
-    "    interests_by_user_id[user_id].append(interest)# "
+    "    interests_by_user_id[user_id].append(interest)"
    ]
   },
   {
