--- a/03. Data Science from Scratch by Joel Grus/Chapter 02.ipynb
+++ b/03. Data Science from Scratch by Joel Grus/Chapter 02.ipynb
@@ -405,7 +405,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1533f307",
+   "id": "f93d0960",
    "metadata": {},
    "source": [
     "## Strings"
@@ -414,7 +414,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "475fcb4f",
+   "id": "0f572537",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -427,7 +427,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "ff981748",
+   "id": "4dfbc579",
    "metadata": {},
    "outputs": [
     {
@@ -452,7 +452,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "5b199634",
+   "id": "5bf70a6e",
    "metadata": {},
    "outputs": [
     {
@@ -469,7 +469,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "28ffdadc",
+   "id": "b7f5a3aa",
    "metadata": {},
    "source": [
     "If you want backslashes as backslashes (which you might in Windows\n",
@@ -480,7 +480,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "95e919e7",
+   "id": "33aaef61",
    "metadata": {},
    "outputs": [
     {
@@ -502,7 +502,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "9f931233",
+   "id": "e8c06843",
    "metadata": {},
    "outputs": [
     {
@@ -519,7 +519,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "54dfc6a3",
+   "id": "be5ed6ca",
    "metadata": {},
    "source": [
     "You can create multiline strings using three double quotes:"
@@ -528,7 +528,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8f028e26",
+   "id": "56e45e51",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -540,7 +540,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "5cd48b41",
+   "id": "31d56788",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -551,7 +551,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "5c93fe0f",
+   "id": "bf6dde2c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -561,7 +561,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8123ea9e",
+   "id": "b89655e4",
    "metadata": {},
    "source": [
     "but the f-string way is much less unwieldy:"
@@ -570,7 +570,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "a33d91fa",
+   "id": "d9b6c901",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -580,7 +580,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "e879412e",
+   "id": "7b91efa8",
    "metadata": {},
    "outputs": [
     {
@@ -601,7 +601,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "edcb4149",
+   "id": "705b76d1",
    "metadata": {},
    "outputs": [
     {
@@ -622,7 +622,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "c1967f45",
+   "id": "6bb83d48",
    "metadata": {},
    "outputs": [
     {
@@ -642,7 +642,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a5771e90",
+   "id": "4a942658",
    "metadata": {},
    "source": [
     "## Exceptions"
@@ -650,7 +650,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3d4ce63e",
+   "id": "ccc4035d",
    "metadata": {},
    "source": [
     "When something goes wrong, Python raises an exception. Unhandled,\n",
@@ -661,7 +661,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "2e518376",
+   "id": "75a645b4",
    "metadata": {},
    "outputs": [
     {
@@ -681,7 +681,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ec0b3086",
+   "id": "203e7287",
    "metadata": {},
    "source": [
     "## Lists"
@@ -690,7 +690,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "b50bfeb0",
+   "id": "806986d7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -702,7 +702,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "43d24f56",
+   "id": "22e459a8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -712,7 +712,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7b3cb49b",
+   "id": "20e58df0",
    "metadata": {},
    "source": [
     "You can get or set the \"nth\" element of a list with square brackets:\n"
@@ -721,7 +721,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "417ac49e",
+   "id": "90be28e4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -736,7 +736,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d2cbadd8",
+   "id": "d1a5ec99",
    "metadata": {},
    "source": [
     "You can also use square brackets to slice lists."
@@ -745,7 +745,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "bd9693a1",
+   "id": "0fe12ba7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -759,7 +759,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1697cba3",
+   "id": "81d85978",
    "metadata": {},
    "source": [
     "You can similarly slice strings and other “sequential” types."
@@ -768,7 +768,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "1707c6fd",
+   "id": "d220d998",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -779,7 +779,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "09be410f",
+   "id": "26ef83bc",
    "metadata": {},
    "outputs": [
     {
@@ -800,7 +800,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "72a5544c",
+   "id": "b5515490",
    "metadata": {},
    "source": [
     "It is easy to concatenate lists together. If you want to modify a list in place,\n",
@@ -810,7 +810,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "119e140c",
+   "id": "0a22b9c9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -820,7 +820,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dbc99552",
+   "id": "93f666ce",
    "metadata": {},
    "source": [
     "If you don’t want to modify x, you can use list addition:\n"
@@ -829,7 +829,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "37454581",
+   "id": "80317b96",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -840,7 +840,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "5c9d590a",
+   "id": "0f625edf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -852,7 +852,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "587724a2",
+   "id": "548dfbfc",
    "metadata": {},
    "source": [
     "It’s often convenient to unpack lists when you know how many elements\n",
@@ -862,7 +862,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "952a2bfa",
+   "id": "710e6b4a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -871,7 +871,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ce77925b",
+   "id": "c721774a",
    "metadata": {},
    "source": [
     "Although you will get a ValueError if you don’t have the same number of\n",
@@ -883,7 +883,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "cf1d2819",
+   "id": "50646b57",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -893,7 +893,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "047b5312",
+   "id": "450a7b5d",
    "metadata": {},
    "outputs": [
     {
@@ -913,7 +913,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "501926bb",
+   "id": "450992d4",
    "metadata": {},
    "source": [
     "## Tuples"
@@ -921,7 +921,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9c9a127d",
+   "id": "e029881c",
    "metadata": {},
    "source": [
     "Tuples are lists’ immutable cousins. Pretty much anything you can do to a\n",
@@ -931,7 +931,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "4856e942",
+   "id": "0eeb2410",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -944,7 +944,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "bf4b3d20",
+   "id": "162a7d12",
    "metadata": {},
    "outputs": [
     {
@@ -964,7 +964,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3382498b",
+   "id": "66f84ec3",
    "metadata": {},
    "source": [
     "Tuples are a convenient way to return multiple values from functions:"
@@ -973,7 +973,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "fc4ea2fe",
+   "id": "12b63fb6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -984,7 +984,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "a8ccfcf9",
+   "id": "c6941de9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -994,7 +994,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4948d137",
+   "id": "1460463e",
    "metadata": {},
    "source": [
     "Tuples (and lists) can also be used for multiple assignment:"
@@ -1003,7 +1003,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "391d7afc",
+   "id": "001467f4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1014,7 +1014,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "f6e3e8e9",
+   "id": "cd013d81",
    "metadata": {},
    "outputs": [
     {
@@ -1035,7 +1035,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "6ba753b1",
+   "id": "157b14df",
    "metadata": {},
    "outputs": [
     {
@@ -1055,7 +1055,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fe83cea8",
+   "id": "538cd5cf",
    "metadata": {},
    "source": [
     "## Dictionaries"
@@ -1063,7 +1063,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "820845bc",
+   "id": "3bd50d1a",
    "metadata": {},
    "source": [
     "Another fundamental data structure is a dictionary, which associates values\n",
@@ -1074,7 +1074,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "e3f877ed",
+   "id": "b8c758db",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1086,7 +1086,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "804b544b",
+   "id": "e7e528c9",
    "metadata": {},
    "outputs": [
     {
@@ -1107,7 +1107,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1fa0bbeb",
+   "id": "6be3f222",
    "metadata": {},
    "source": [
     "But you’ll get a KeyError if you ask for a key that’s not in the dictionary:"
@@ -1116,7 +1116,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "62d77368",
+   "id": "1a066847",
    "metadata": {},
    "outputs": [
     {
@@ -1136,7 +1136,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8a60defc",
+   "id": "496f47a9",
    "metadata": {},
    "source": [
     "You can check for the existence of a key using \"in\":\n"
@@ -1145,7 +1145,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "6efe87c6",
+   "id": "421cb768",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1156,7 +1156,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "e051bed5",
+   "id": "0303236b",
    "metadata": {},
    "outputs": [
     {
@@ -1177,7 +1177,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "6b873777",
+   "id": "5edd1c03",
    "metadata": {},
    "outputs": [
     {
@@ -1197,7 +1197,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3cd6b482",
+   "id": "9f4d7226",
    "metadata": {},
    "source": [
     "Dictionaries have a \"get\" method that returns a default value (instead of\n",
@@ -1207,7 +1207,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "fd5d7860",
+   "id": "e6cca884",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1219,7 +1219,7 @@
   {
    "cell_type": "code",
    "execution_count": 80,
-   "id": "47d3a508",
+   "id": "a0868811",
    "metadata": {},
    "outputs": [
     {
@@ -1240,7 +1240,7 @@
   {
    "cell_type": "code",
    "execution_count": 81,
-   "id": "de6293e9",
+   "id": "56d10175",
    "metadata": {},
    "outputs": [
     {
@@ -1262,7 +1262,7 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "id": "53c1eba6",
+   "id": "af89b87f",
    "metadata": {},
    "outputs": [
     {
@@ -1286,7 +1286,7 @@
   {
    "cell_type": "code",
    "execution_count": 83,
-   "id": "b5d00a20",
+   "id": "1547ba8e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1300,7 +1300,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8d328e67",
+   "id": "48a5d84b",
    "metadata": {},
    "source": [
     "Besides looking for specific keys, we can look at all of them:"
@@ -1309,7 +1309,7 @@
   {
    "cell_type": "code",
    "execution_count": 84,
-   "id": "215396e3",
+   "id": "70d76b88",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1321,7 +1321,7 @@
   {
    "cell_type": "code",
    "execution_count": 85,
-   "id": "14197716",
+   "id": "13aea4b1",
    "metadata": {},
    "outputs": [
     {
@@ -1342,7 +1342,7 @@
   {
    "cell_type": "code",
    "execution_count": 86,
-   "id": "b0e4e612",
+   "id": "931c7c26",
    "metadata": {},
    "outputs": [
     {
@@ -1363,7 +1363,7 @@
   {
    "cell_type": "code",
    "execution_count": 87,
-   "id": "8af13987",
+   "id": "57ae5ea3",
    "metadata": {},
    "outputs": [
     {
@@ -1384,7 +1384,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0656587d",
+   "id": "a7f81a44",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1396,7 +1396,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b682082f",
+   "id": "af822007",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1407,7 +1407,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6faf3e74",
+   "id": "c4ad98a8",
    "metadata": {},
    "source": [
     "### defaultdict"
@@ -1415,7 +1415,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c8802665",
+   "id": "83ccc328",
    "metadata": {},
    "source": [
     "Imagine that you’re trying to count the words in a document. An obvious\n",
@@ -1426,22 +1426,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
-   "id": "8a1df347",
+   "execution_count": 98,
+   "id": "0338cdd3",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'document' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[88], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m word_counts \u001b[38;5;241m=\u001b[39m {}\n\u001b[1;32m----> 2\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m word \u001b[38;5;129;01min\u001b[39;00m \u001b[43mdocument\u001b[49m:\n\u001b[0;32m      3\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m word \u001b[38;5;129;01min\u001b[39;00m word_counts:\n\u001b[0;32m      4\u001b[0m         word_counts[word] \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1\u001b[39m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'document' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "document = \"Hi this is Sabboshachi Sarkar\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "id": "d2d8fdcb",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "word_counts = {}\n",
     "for word in document:\n",
@@ -1452,11 +1450,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "395b1c0e",
+   "cell_type": "markdown",
+   "id": "6a1ff91b",
    "metadata": {},
-   "outputs": [],
    "source": [
     "You could also use the “forgiveness is better than permission” approach and\n",
     "just handle the exception from trying to look up a missing key:"
@@ -1464,22 +1460,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
-   "id": "ee042135",
+   "execution_count": 101,
+   "id": "14e660a3",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'document' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[90], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m word_counts \u001b[38;5;241m=\u001b[39m {}\n\u001b[1;32m----> 2\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m word \u001b[38;5;129;01min\u001b[39;00m \u001b[43mdocument\u001b[49m:\n\u001b[0;32m      3\u001b[0m     \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m      4\u001b[0m         word_counts[word] \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1\u001b[39m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'document' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "word_counts = {}\n",
     "for word in document:\n",
@@ -1491,8 +1475,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "30816de0",
+   "execution_count": 102,
+   "id": "81906112",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1503,11 +1487,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6a5594b5",
+   "cell_type": "markdown",
+   "id": "3b4fb197",
    "metadata": {},
-   "outputs": [],
    "source": [
     "Every one of these is slightly unwieldy, which is why defaultdict is\n",
     "useful. A defaultdict is like a regular dictionary, except that when you try\n",
@@ -1517,8 +1499,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "32825d4f",
+   "execution_count": 105,
+   "id": "f3ffc0dd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1529,19 +1511,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d5e95485",
+   "cell_type": "markdown",
+   "id": "9683be57",
    "metadata": {},
-   "outputs": [],
    "source": [
     "They can also be useful with list or dict, or even your own functions:\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "c61ec613",
+   "execution_count": 106,
+   "id": "3aefa3a2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1556,16 +1536,22 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "99009856",
+   "cell_type": "markdown",
+   "id": "1e760139",
    "metadata": {},
-   "outputs": [],
    "source": [
     "These will be useful when we’re using dictionaries to “collect” results by\n",
     "some key and don’t want to have to check every time to see if the key exists\n",
     "yet."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a2be9f87",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
